VP 10.6.0 Changelog
------------------------
- add support for up to 9 custom start parameters (range 1-9). Usage: "Vpinball.exe -c1 param1 -c2 param2" sets two custom parameter "param1" and "param2". In the script use:
  GetCustomParam(1) to get "param1" and GetCustomParam(2) to get "param2"

- add EnableSkirtAnimation for bumpers to enable/disable skirt animation

- add strength parameter for the (optional) legacy/VP9-like keyboard nudging code, can be set in the 'Keys, Nudge and DOF' preferences dialog

- add support for showing the image of a primitve mesh in the editor. However this feature is far from perfect because Windows GDI, that draws the elements in the editor, can't handle meshes well.

- re-use existing sound settings if re-importing a sound file

- fix crash in collection manager if a collection is moved up/down

- fix ball decal splotches if only a global ball image was set in the video preferences

- new table-script manipulation features:
  '-extractvbs' parameter: "VPinballX -extractvbs tablename.vpx" extracts the script and exits
  VPX will automatically replace the table-script with a vbs file named the same as the table file (similar to the existing pov file functionality)

- add support for using a primitive as playfield instead of the build-in one:
    o to create a mesh playfield create a new blank table and export it as obj file
    o open the obj file in Blender and edit the playfield mesh (mesh name is "Table1")
    o cut holes into the playfield where you want to place kickers, VUKs and so on
    o export the modified playfield mesh as a separate obj file and import it to VPX
    o in VPX rename the playfield primitive to "playfield_mesh"
    o the playfield primitive doesn't need an image and a material. VPX will use the texture and material from the playfield properties
