@@ -49,12 +49,12 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,53,104,10
 END
 
-IDD_DIMENSION_CALCULATOR DIALOGEX 0, 0, 316, 169
+IDD_DIMENSION_CALCULATOR DIALOGEX 0, 0, 317, 182
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dimensions Manager"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDC_OK,259,148,50,14
+    DEFPUSHBUTTON   "OK",IDC_OK,259,160,50,14
     GROUPBOX        "Table size (inch)",IDC_STATIC,221,9,79,47
     GROUPBOX        "Table size in VP",IDC_STATIC,221,59,79,47
     LTEXT           "Width",IDC_STATIC,228,23,20,8
@@ -65,10 +65,11 @@ BEGIN
     LTEXT           "Height",IDC_STATIC,228,88,22,8
     EDITTEXT        IDC_VP_WIDTH,252,68,40,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_VP_HEIGHT,252,85,40,14,ES_AUTOHSCROLL
-    GROUPBOX        "Predefined Tables",IDC_STATIC,7,7,207,155
-    CONTROL         "",IDC_TABLE_DIM_LIST,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,12,16,198,141
+    GROUPBOX        "Predefined Tables",IDC_STATIC,7,5,207,173
+    CONTROL         "",IDC_TABLE_DIM_LIST,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,12,16,198,156
     GROUPBOX        "Aspect Ratio for FS",IDC_ASPECT_RATIO_GROUP,221,109,79,27
     EDITTEXT        IDC_ASPECT_RATIO_EDIT,240,119,40,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "&Apply",IDC_APPLY_TO_TABLE,259,140,50,14
 END
 
 IDD_DRAWING_ORDER DIALOGEX 0, 0, 349, 200
@@ -2268,6 +2269,8 @@ BEGIN
 
     IDD_DIMENSION_CALCULATOR, DIALOG
     BEGIN
+        RIGHTMARGIN, 316
+        BOTTOMMARGIN, 169
     END
 
     IDD_DRAWING_ORDER, DIALOG
