@@ -1,5 +1,7 @@
 VP 10.6.0 Changelog
 ------------------------
+- add apply button to the dimensions manager to apply the selected dimension to the active table.
+
 - add support for up to 9 custom start parameters (range 1-9). Usage: "Vpinball.exe -c1 param1 -c2 param2" sets two custom parameter "param1" and "param2". In the script use:
   GetCustomParam(1) to get "param1" and GetCustomParam(2) to get "param2"
 
